# EuroQoL

./: .gitignore  CLAUDE.md  pyproject.toml
data/: PopCompData_CUrrentCleanedVariables_Apr2026.xlsx
notebooks/: 01-exploratory.ipynb  02-supervised_class.ipynb  03-classification_hse_dapph.ipynb  03-classification_hse_dapph_reasoning.md
notebooks/clustering/: 01-kmeans_umap.ipynb  011-kmeans_umap.ipynb  012-kmeans_umap.ipynb  013-kmeans_umap.ipynb  014-kmeans_umap.ipynb  02-lca.ipynb  03-community_detection.ipynb  031-community_detection.ipynb
notebooks/covariate_shift/: 01-covariate_comparison.ipynb  011-covariate_comparison_hse.ipynb  02-daphnie_vs_hse.ipynb  021-daphnie_vs_hse.ipynb  03-density_ratio.ipynb  031-density_ratio.ipynb  032-density_ratio.ipynb  04-norm_derivation.ipynb  041-norm_derivation.ipynb  042-norm_derivation.ipynb  043-norm_derivation.ipynb  044-norm_derivation.ipynb
notebooks/data_wrangling/: 01-csv_wrangling.ipynb  01-wranlging.ipynb  02-csv_wrangling.ipynb
src/euroqol/: utils.py
