[project]
name = "euroqol"
version = "0.1.0"
description = ""
authors = [
    {name = "Luis Giraldo",email = "luisggon@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "xgboost (>=3.2.0,<4.0.0)",
    "catboost (>=1.2.10,<2.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "venn-abers (>=1.5.1,<2.0.0)",
    "umap-learn (>=0.5.12,<0.6.0)"
]

[tool.poetry]
packages = [{include = "euroqol", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
